--- a/build.gradle
+++ b/build.gradle
@@ -75,9 +75,9 @@ dependencies {
     testImplementation "org.seleniumhq.selenium:selenium-remote-driver:4.19.1"
     testImplementation "org.seleniumhq.selenium:selenium-support:4.19.1"
     testImplementation "org.spockframework:spock-core"
-    testImplementation "org.testcontainers:mysql"
-    testImplementation "org.testcontainers:spock"
-    testImplementation "org.testcontainers:testcontainers"
+    testImplementation 'org.testcontainers:mysql:1.20.4'
+    testImplementation 'org.testcontainers:spock:1.20.4'
+    testImplementation 'org.testcontainers:testcontainers:1.20.4'
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:4.19.1"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:4.19.1"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-safari-driver:4.19.1"
